# ray-train-demo

./: hello.py  image.py  pyproject.toml
