[project]
name = "ray-train-demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "filelock>=3.16.1",
    "numpy>=2.2.0",
    "pytorch-lightning>=2.4.0",
    "ray[train]>=2.40.0",
    "torch>=2.5.1",
    "torchmetrics>=1.6.0",
    "torchvision>=0.20.1",
]
